Finished Section: 13 Lecure: 137

--- a/js-bootcamp/boilerplate/package.json
+++ b/js-bootcamp/boilerplate/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "input.js",
   "scripts": {
-    "build": "babel src/index.js -o public/scripts/bundle.js --presets env --watch" 
+    "serve": "live-server public",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-env": "^1.7.0"
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "live-server": "^1.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
