--- a/js-bootcamp/notes-app/package.json
+++ b/js-bootcamp/notes-app/package.json
@@ -15,6 +15,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
+    "uuid": "^3.4.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
